--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node",
     "build": "babel src --ignore node_modules -d dist",
-    "prod": "node dist/index.js"
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
