--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.15.0"
+    "sequelize": "^6.15.0",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
